@@ -351,6 +351,8 @@ void GBAIOWrite(struct GBA* gba, uint32_t address, uint16_t value) {
 			break;
 		case REG_SOUNDCNT_X:
 			GBAAudioWriteSOUNDCNT_X(&gba->audio, value);
+			value &= 0xFFFF;
+			value |= gba->memory.io[REG_SOUNDCNT_X >> 1] & 0xF;
 			break;
 		case REG_SOUNDBIAS:
 			GBAAudioWriteSOUNDBIAS(&gba->audio, value);
