@@ -1,6 +1,8 @@
 0.3.2: (Future)
 Bugfixes:
  - Qt: Use safer isLoaded check in GameController
+Misc:
+ - GBA Audio: Implement missing flags on SOUNDCNT_X register
 
 0.3.1: (2015-10-24)
 Bugfixes:
